Fixes text overflow on project buttons
adds an appropriate width to project title div
in the project buttons so the text doesn't push
the edit and delete buttons beyond the border

--- a/src/style.css
+++ b/src/style.css
@@ -94,6 +94,8 @@ header h1 {
     flex-grow: 1;
     text-align: start;
     margin-left: 5px;
+    width: 240px;
+    word-wrap: break-word;
 }
 
 .project .projectDelete {
@@ -315,6 +317,12 @@ textarea {
         position: absolute;
         right: 30px;
     }
+
+    .project .projectName {
+        width: 120px;
+        word-wrap: break-word;
+    }
+
     .sideBar {
         position: absolute;
         background-color: black;
